# PUFfRS

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Doxyfile  README.md
cmake/: Trilinos-build.cmake.in
docs/: requirements.txt
docs/html/: classes.html  classpuffrs_1_1Discretization.html  classpuffrs_1_1Discretization__inherit__graph.dot  classpuffrs_1_1Discretization__inherit__graph.md5  classpuffrs_1_1Puffrs.html  classpuffrs_1_1PuffrsFactory.html  classpuffrs_1_1PuffrsParser-members.html  classpuffrs_1_1PuffrsParser.html  classpuffrs_1_1RegularDiscretization-members.html  classpuffrs_1_1RegularDiscretization.html  classpuffrs_1_1RegularDiscretization__coll__graph.dot  classpuffrs_1_1RegularDiscretization__coll__graph.map  classpuffrs_1_1RegularDiscretization__inherit__graph.dot  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.dot  inherit_graph_3.map  inherit_graph_4.dot  inherits.html  puffrs__discretization__factory_8h_source.html  puffrs__parser_8h_source.html  puffrs__types_8h_source.html
docs/latex/: annotated.tex  classpuffrs_1_1Discretization.tex  classpuffrs_1_1Discretization.tex.tmp  classpuffrs_1_1DiscretizationFactory.tex  classpuffrs_1_1Discretization__inherit__graph.dot  classpuffrs_1_1Discretization__inherit__graph.md5  classpuffrs_1_1Puffrs.tex  classpuffrs_1_1PuffrsFactory.tex  classpuffrs_1_1PuffrsParser.tex  classpuffrs_1_1RegularDiscretization.tex  classpuffrs_1_1RegularDiscretization__coll__graph.dot  classpuffrs_1_1RegularDiscretization__coll__graph.md5  classpuffrs_1_1RegularDiscretization__inherit__graph.dot  classpuffrs_1_1RegularDiscretization__inherit__graph.md5  hierarchy.tex  refman.tex
src/: CMakeLists.txt  PUFfRS_Main.cpp  PUFfRS_Main.h  puffrs.cc  puffrs.h  puffrs_discretization.cc  puffrs_discretization.h  puffrs_discretization_factory.cc  puffrs_discretization_factory.h  puffrs_factory.cc  puffrs_factory.h  puffrs_main.cc  puffrs_parser.cc  puffrs_parser.h  puffrs_regular_discretization.cc  puffrs_regular_discretization.h  puffrs_types.h  puffrs_version.h.in
src/test/: CMakeLists.txt  puffrs_parser_test.cc  puffrs_standard_test_main.cc
(+61 files in other folders)
